--- a/asset/Style/style.css
+++ b/asset/Style/style.css
@@ -2617,3 +2617,11 @@ body {
         font-size: 24px;
     }
 }
+/* lien "Customisation" sans soulignement */
+.nav-center a.value,
+.nav-center a.value:visited,
+.nav-center a.value:hover,
+.nav-center a.value:focus {
+    text-decoration: none;
+    border-bottom: 0; /* au cas où l’underline serait simulé en bordure */
+}
